[package]
name = "io-uring-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["rt", "net"] }
io-uring = { version = "0.5.12", features = ["unstable"] }
slab = { version = "0.4" }

[dev-dependencies]
send_wrapper = { version = "0.6.0" }